# oop_lab5

./: CMakeLists.txt  Readme.md
include/: header.hpp  list.hpp
src/: main.cpp  program
tests/: test.cpp
